# rp2040-programs

./: .gitignore  .gitmodules  README.md
C/: CMakeLists_template.txt  cmake_build.sh
C/LED-Count-noSleep/: CMakeLists.txt  binarycount.h  led_count.c
C/LED-Count-noSleep/include/: binarycount.h
C/LED_Reg_Tim/: CMakeLists.txt  LED_Reg_Tim.c
C/adc_pot/: CMakeLists.txt  adc_pot.c  adc_pot.sublime-project  adc_pot.sublime-workspace
C/adc_read_after_wake/: CMakeLists.txt  main.c
C/blink_external/: CMakeLists.txt  blink_external.c
C/blink_shutdown/: CMakeLists.txt  blink_shutdown.c
C/bus_scan/: CMakeLists.txt
C/button/: CMakeLists.txt  button.c
C/button2/: CMakeLists.txt  button2.c
C/button_interrupt/: CMakeLists.txt  button_interrupt.c
C/debounce/: CMakeLists.txt  debounce.c  debounce.h  diagram.json  main.c  wokwi-project.txt
C/dht/: CMakeLists.txt  dht.c
C/encoder/: CMakeLists.txt  debounce.h  diagram.json  lcd.c  lcd.h  main.c  rotaryencoder.c  rotaryencoder.h
C/hello_usb/: CMakeLists.txt  hello_usb.c  hello_usb_bkup.c
C/nightlight/: CMakeLists.txt  nightlight.c
C/pwm_duty/: CMakeLists.txt
C/relay/: CMakeLists.txt  relay.c
C/temperature_internal/: CMakeLists.txt  temperature_internal.c
C/traffic-light/: CMakeLists.txt  traffic_light.c
C/traffic-light/include/: traffic_light.h
Python/MacroPad/: adafruit_debouncer.py  boot.py  code.py
Python/WS2812/: breathe.py  cirpy.py  fill.py  googleamazon.py  loop.py  neopixel_ring.py  withwhite.py
Python/async_server/: WiFi.py  async_server.py  heartbeat.py  index.html  sensor_server.py  temperature_server.py  time_server.py
Python/async_server/lib/: WiFi.py  async_server.py  time_convert.py  worldtimeapi.py
Python/async_server/stress_test/: async_get.py  common.py  sync_get.py
Python/blink_pio/: main.py
Python/bme280/: bme280.py  i2c_test.py
Python/dht/: dht11Test.py
Python/ds3231/: alarm.py  example.py  print_time.py  read_time.py  receive_serial.py  send_serial.py  set_time.py  test_echo.py
Python/lcd/: i2c_lcd_test.py  i2c_scan.py
Python/led_toggle/: led_toggle.py
Python/network_connect/: main.py  mysecrets.py
Python/ntp/: ntp.py  ntptime.py
Python/server_sensor/: index.html  main.py  secrets.py
Python/ssd1306/: logo.py  oled.py
Python/tph_microdot/: index.html  thp_microdot.py
Python/tph_microdot/lib/: WiFi.py  mysecrets.py
Python/tph_microdot/lib/logging/: __init__.py
Python/weather_station/: main.py
Python/web_button/: led.html  main.py  mysecrets.py
Python/web_request/: web_request.py
Python/web_server/: http_server.py  led_control.py
